--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  script: {{ PYTHON }} -m pip install . --no-deps -vv
+  script: {{ PYTHON }} setup.py install
 
 requirements:
   build:
@@ -54,3 +54,4 @@ about:
 extra:
   recipe-maintainers:
     - liadomide
+    - bvalean 
